--- a/JMB-Application/package.json
+++ b/JMB-Application/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.21.1",
     "expo": "~51.0.28",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
