--- a/JMB-Application/package.json
+++ b/JMB-Application/package.json
@@ -10,26 +10,27 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.21.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
+    "expo-dev-client": "~4.0.29",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv-storage": "^0.10.3",
     "react-native-permissions": "^5.2.0",
-    "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
